--- a/src/app/transactions/fee-paid-management/fee-paid-management.component.scss
+++ b/src/app/transactions/fee-paid-management/fee-paid-management.component.scss
@@ -1,7 +1,7 @@
 
 .container-custom {
   max-width: 105rem;
-  width: 100%;
+  width: 96%;
   margin: 0 auto;
 }
 
@@ -33,7 +33,7 @@ tr.example-detail-row {
 
 .example-element-row td {
   border-bottom-width: 0;
-  padding: 10px 0;
+  // padding: 10px 0;
 }
 
 .example-element-detail {
