--- a/src/app/transactions/rollTerm-schedule-transaction/roll-term-schedule-tab/roll-term-schedule-tab.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/roll-term-schedule-tab/roll-term-schedule-tab.component.html
@@ -175,7 +175,7 @@
           Số tiền đáo hạn <br />
           (a)
         </th>
-        <td mat-cell *matCellDef="let journalEntry">{{ journalEntry.principal | money }}</td>
+        <td mat-cell *matCellDef="let journalEntry">{{ journalEntry?.principal | money }}</td>
       </ng-container>
 
       <ng-container matColumnDef="paidAmount">
@@ -192,7 +192,7 @@
           (c) = (a) - (b)
         </th>
         <td mat-cell fxHide fxShow.gt-md *matCellDef="let journalEntry">
-          {{ journalEntry.principal - journalEntry.paidAmount | money }}
+          {{ journalEntry?.principal - journalEntry?.paidAmount | money }}
         </td>
       </ng-container>
 
@@ -265,25 +265,25 @@
                 <span style="font-weight: bold">
                   Số tiền đáo hạn <br />
                   (a) :</span
-                >&nbsp; &nbsp;{{ element.principal }}
+                >&nbsp; &nbsp;{{ element?.principal }}
               </div>
               <div>
                 <span style="font-weight: bold">
                   Đã chi <br />
                   (b) :</span
-                >&nbsp; &nbsp;{{ element.paidAmount | money }}
+                >&nbsp; &nbsp;{{ element?.paidAmount | money }}
               </div>
               <div>
                 <span style="font-weight: bold">
                   Còn phải đáo hạn <br />
                   (c) = (a) - (b) :</span
-                >&nbsp; &nbsp;{{ element.principal - element.paidAmount | money }}
+                >&nbsp; &nbsp;{{ element?.principal - element?.paidAmount | money }}
               </div>
               <div>
                 <span style="font-weight: bold">
                   Đã thu hồi <br />
                   (d) :</span
-                >&nbsp; &nbsp;{{ element.amountPaid | money }}
+                >&nbsp; &nbsp;{{ element?.amountPaid | money }}
               </div>
               <div>
                 <span style="font-weight: bold">
