--- a/src/app/clients/balance-account-client/balance-account-client.component.scss
+++ b/src/app/clients/balance-account-client/balance-account-client.component.scss
@@ -52,3 +52,9 @@ tr.example-element-row:not(.example-expanded-row):active {
 .example-element-description-attribution {
   opacity: 0.5;
 }
+
+.fix_header{
+  margin-top: 15px; 
+  width: 48%;
+  margin-bottom: 25px;
+}
