--- a/src/app/transactions/fee-paid-management/fee-paid-management.component.html
+++ b/src/app/transactions/fee-paid-management/fee-paid-management.component.html
@@ -321,7 +321,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
         <td mat-cell *matCellDef="let transaction">
           <span
-            style="float: right; width: 15px"
+            style=" width: 40px"
             [matMenuTriggerData]="{ txnCode: transaction }"
             [matMenuTriggerFor]="transactionMenu"
             matTooltip="Menu"
