--- a/src/app/transactions/batch-transactions/create-batch-transaction/create-batch-transaction.component.html
+++ b/src/app/transactions/batch-transactions/create-batch-transaction/create-batch-transaction.component.html
@@ -231,7 +231,7 @@
             <td mat-cell fxHide fxShow.gt-md *matCellDef="let form" [formGroup]="form" style="text-align: center;">
               <mat-form-field *ngIf="form.contains('batchNo') && !form.contains('saved')" class="no-input">
                 <mat-label>Batch No</mat-label>
-                <input  matInput formControlName="batchNo" />
+                <input required matInput formControlName="batchNo" />
               </mat-form-field>
               <span  *ngIf="form.contains('saved')" >{{ form.get("batchNo").value }}</span>
             </td>
@@ -242,7 +242,7 @@
             <td mat-cell fxHide fxShow.gt-md *matCellDef="let form" [formGroup]="form" style="text-align: center;" >
               <mat-form-field *ngIf="form.contains('tid') && !form.contains('saved')" class="no-input">
                 <mat-label>Trace No</mat-label>
-                <input  matInput formControlName="tid" />
+                <input required matInput formControlName="tid" />
               </mat-form-field>
               <span  *ngIf="form.contains('saved')">{{ form.get("tid").value }}</span>
             </td>
@@ -253,7 +253,7 @@
             <td mat-cell *matCellDef="let form" [formGroup]="form">
               <mat-form-field *ngIf="form.contains('terminalAmount') && !form.contains('saved')" class="input-custom">
                 <mat-label>Số tiền trên bill</mat-label>
-                <input matInput currencyMask formControlName="terminalAmount" />
+                <input matInput required currencyMask formControlName="terminalAmount" />
               </mat-form-field>
               <span *ngIf="form.contains('saved')" style="text-align: right">{{
                 form.get("terminalAmount").value | money
