add transfer cross branch

--- a/src/app/clients/clients-view/clients-view.component-theme.scss
+++ b/src/app/clients/clients-view/clients-view.component-theme.scss
@@ -10,4 +10,14 @@
       }
     }
   }
+
+  .signatureStaff {
+    // background-color: white;
+    color: white;
+    font-size: medium;
+    text-align: left;
+    padding: 5px;
+    margin: 15px;
+    font-weight: bold;
+  }
 }
