--- a/src/main.scss
+++ b/src/main.scss
@@ -30,3 +30,7 @@ $fa-font-path:"theme/fontawesome/webfonts";
   color: red !important;
   font-weight: bold !important;
 }
+.mat-select-disabled .mat-select-value {
+  color: red !important;
+  font-weight: bold !important;
+}
