add trnsfer cross branch
add transfer cross branch

--- a/src/app/savings/savings-account-view/form-dialog/transfer-cross-office/transfer-cross-office.component.html
+++ b/src/app/savings/savings-account-view/form-dialog/transfer-cross-office/transfer-cross-office.component.html
@@ -48,7 +48,7 @@
 
   <mat-form-field *ngIf="form.contains('note')" fxFlex="48%">
     <mat-label>{{'Saving_Account_Component.clientAdvanceCash.labelNoteAdvance' |translate}}</mat-label>
-    <input type="text" aria-multiline="true" matInput formControlName="noteAdvance">
+    <input type="text" aria-multiline="true" matInput formControlName="note">
   </mat-form-field>
 
 </div>
